--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 3fr 1fr;
   padding: 50px;
+  max-width: 100%;
 }
 .card-container h1{
   display: flex;
@@ -13,4 +14,10 @@
 .card-container h1 img{
   width: 50px;
   height: 50px;
+}
+@media screen and (max-width: 600px) {
+  .App{
+    grid-template-columns: 1fr;
+    margin: auto;
+  }
 }
