--- a/src/component/activity/Activity.css
+++ b/src/component/activity/Activity.css
@@ -34,13 +34,12 @@
 .activity button{
     display: flex;
     justify-content: center;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background: #FFE0B3;
+    width: 70%;
+    background: green;
+    color: white;
     border: 1px solid #95A0A7;
-    border-radius: 0px 0px 8px 8px;
-    align-items: center;
+    border-radius: 10px;
+    margin: 20px auto;
 }
 .activity button p{
    margin-top: 10px;
