--- a/src/component/activity/Activity.css
+++ b/src/component/activity/Activity.css
@@ -34,13 +34,18 @@
 .activity button{
     display: flex;
     justify-content: center;
+    align-self: center;
     width: 70%;
     background: green;
     color: white;
     border: 1px solid #95A0A7;
     border-radius: 10px;
-    margin: 20px auto;
+    margin: 20px;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
 }
 .activity button p{
-   margin-top: 10px;
+    padding: 0;
+    margin: 0;
 }
