--- a/src/component/cart/Cart.css
+++ b/src/component/cart/Cart.css
@@ -1,6 +1,6 @@
 .selected-container{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     row-gap: 30px;
     position: sticky;
     top: 0;
